src/rgw/rgw_log.h
@@ -192,9 +192,10 @@ public:
 };
 
 class OpsLogRados : public OpsLogSink {
-  RGWRados* store;
+  // main()'s Store pointer as a reference, possibly modified by RGWRealmReloader
+  RGWRados* const& store;
 public:
-  OpsLogRados(RGWRados* store);
+  OpsLogRados(RGWRados* const& store);
   int log(struct req_state* s, struct rgw_log_entry& entry) override;
 };
 
