src/rgw/rgw_main.cc
@@ -516,7 +516,7 @@ int radosgw_Main(int argc, const char **argv)
     ops_log_file->start();
     olog->add_sink(ops_log_file);
   }
-  olog->add_sink(new OpsLogRados(store->getRados()));
+  olog->add_sink(new OpsLogRados(store));
 
   r = signal_fd_init();
   if (r < 0) {
